rename npm package to zkbasecred-skill (unscoped)
Drop @basecred/ scope so the package can be published without an npm org subscription.

--- a/packages/docs/integration/openclaw.mdx
+++ b/packages/docs/integration/openclaw.mdx
@@ -104,7 +104,7 @@ If you prefer, you can still create API keys manually:
 **Option A: OpenClaw CLI**
 
 ```bash
-npx @basecred/zkbasecred-skill
+npx zkbasecred-skill
 ```
 
 **Option B: Manual**
