--- a/packages/docs/integration/openclaw.mdx
+++ b/packages/docs/integration/openclaw.mdx
@@ -104,7 +104,7 @@ If you prefer, you can still create API keys manually:
 **Option A: OpenClaw CLI**
 
 ```bash
-npx zkbasecred-skill
+npx zkbasecredagent-skill
 ```
 
 **Option B: Manual**
