--- a/packages/docs/integration/agent-api.mdx
+++ b/packages/docs/integration/agent-api.mdx
@@ -31,6 +31,7 @@ Agent self-registration. No authentication required. Rate limited to 10 requests
 | `agentName` | `string` | Yes | 2-64 chars, alphanumeric and underscores only |
 | `telegramId` | `string` | Yes | Owner's Telegram handle (max 128 chars) |
 | `ownerAddress` | `string` | Yes | Valid Ethereum address |
+| `webhookUrl` | `string` | No | HTTPS URL for event notifications (max 512 chars) |
 
 ```bash
 curl -X POST https://www.zkbasecred.xyz/api/v1/agent/register \
@@ -38,7 +39,8 @@ curl -X POST https://www.zkbasecred.xyz/api/v1/agent/register \
   -d '{
     "agentName": "my_agent",
     "telegramId": "@owner_tg",
-    "ownerAddress": "0x1234...abcd"
+    "ownerAddress": "0x1234...abcd",
+    "webhookUrl": "https://example.com/webhook"
   }'
 ```
 
@@ -169,6 +171,79 @@ On success, the agent's API key is activated and can be used for authenticated e
 | 410 | `VERIFICATION_ERROR` | Registration revoked or expired |
 | 422 | `VERIFICATION_ERROR` | Tweet doesn't contain verification code or can't be fetched |
 | 429 | `RATE_LIMITED` | Too many verification attempts |
+
+---
+
+## Webhook Notifications
+
+If you provided a `webhookUrl` during registration, zkBaseCred will POST JSON events to that URL. Delivery is fire-and-forget — no retries, no queue.
+
+### Events
+
+| Event | When It Fires |
+|---|---|
+| `agent.verified` | Owner successfully verifies the agent via tweet |
+| `reputation.checked` | Agent calls `check-owner` or `/decide` |
+| `agent.revoked` | Owner revokes the agent registration |
+
+### Payload Shape
+
+All webhook payloads follow the same structure:
+
+```json
+{
+  "event": "reputation.checked",
+  "timestamp": 1700000000000,
+  "agentName": "my_agent",
+  "ownerAddress": "0x1234...abcd",
+  "data": { }
+}
+```
+
+### Example: `agent.verified`
+
+```json
+{
+  "event": "agent.verified",
+  "timestamp": 1700000000000,
+  "agentName": "my_agent",
+  "ownerAddress": "0x1234...abcd",
+  "data": {
+    "claimId": "abc123..."
+  }
+}
+```
+
+### Example: `reputation.checked`
+
+```json
+{
+  "event": "reputation.checked",
+  "timestamp": 1700000000000,
+  "agentName": "my_agent",
+  "ownerAddress": "0x1234...abcd",
+  "data": {
+    "summary": "Your reputation is strong...",
+    "results": {
+      "allowlist.general": { "decision": "ALLOW", "confidence": "HIGH" }
+    }
+  }
+}
+```
+
+### Requirements
+
+| Constraint | Detail |
+|---|---|
+| Protocol | HTTPS only (no HTTP) |
+| Private IPs | Blocked (localhost, 10.x, 192.168.x, 127.x) |
+| Max length | 512 characters |
+| Timeout | 5 seconds — slow endpoints are silently dropped |
+| Retries | None — fire-and-forget |
+
+:::info
+Webhooks are optional. If no `webhookUrl` is provided during registration, no events are sent. The agent can always poll endpoints instead.
+:::
 
 ---
 
@@ -386,6 +461,7 @@ Returns all non-revoked agents registered to the wallet.
       "claimId": "abc123...",
       "agentName": "my_agent",
       "telegramId": "@owner_tg",
+      "webhookUrl": "https://example.com/webhook",
       "status": "verified",
       "apiKeyPrefix": "bc_abc123......wxyz",
       "createdAt": 1700000000000,
@@ -440,10 +516,10 @@ Revokes an agent and deactivates its API key. Only the owner can revoke their ow
 ## Typical Agent Flow
 
 ```
-1. POST /api/v1/agent/register          → Get apiKey + claimUrl
+1. POST /api/v1/agent/register          → Get apiKey + claimUrl (optionally include webhookUrl)
 2. Send claimUrl to owner               → Owner posts tweet
-3. GET  .../register/{claimId}/status    → Poll until "verified"
-4. POST /api/v1/agent/check-owner       → Get reputation results
+3. GET  .../register/{claimId}/status    → Poll until "verified" (or receive agent.verified webhook)
+4. POST /api/v1/agent/check-owner       → Get reputation results (triggers reputation.checked webhook)
 5. Deliver summary to owner             → Natural language, ready to forward
 ```
 
