--- a/packages/docs/integration/integration.mdx
+++ b/packages/docs/integration/integration.mdx
@@ -41,99 +41,6 @@ curl https://www.zkbasecred.xyz/api/v1/contexts
 }
 ```
 
-### Endpoint: Decision
-
-<div className="bg-zinc-900 border border-zinc-800 rounded-lg p-4 mb-4">
-  <span className="bg-emerald-900/30 text-emerald-400 border border-emerald-900/50 text-xs font-bold px-2 py-0.5 rounded mr-2">
-    POST
-  </span>
-  <code className="text-zinc-300">
-    /api/v1/decide
-  </code>
-</div>
-
-Evaluates a subject's reputation for a given context and returns a decision with explanation. Rate limited: 100 requests/minute per API key (when using `x-api-key` header).
-
-```bash
-curl -X POST https://www.zkbasecred.xyz/api/v1/decide \
-  -H "Content-Type: application/json" \
-  -d '{"subject": "0xYourAddress", "context": "allowlist.general"}'
-```
-
-**Request body**
-
-| Field | Type | Required | Description |
-|---|---|---|---|
-| `subject` | `string` | Yes | Wallet address or identifier to evaluate |
-| `context` | `string` | Yes | Decision context (from `/api/v1/contexts`) |
-
-**200 OK**
-
-```json
-{
-  "decision": "ALLOW",
-  "confidence": "HIGH",
-  "constraints": [],
-  "retryAfter": null,
-  "ruleIds": ["ethos-trust-high", "neynar-social-check"],
-  "version": "1.0.0",
-  "explain": [
-    "Trust level: HIGH",
-    "Social trust: HIGH",
-    "Eligible for allowlist.general based on reputation signals."
-  ],
-  "subjectHash": "0xabc123...",
-  "profile": { ... },
-  "signals": {
-    "trust": "HIGH",
-    "socialTrust": "HIGH",
-    "builder": "EXPERT",
-    "creator": "BUILDER",
-    "recencyDays": 5,
-    "spamRisk": "NEUTRAL",
-    "signalCoverage": 1.0
-  },
-  "policyHash": "sha256:abc123..."
-}
-```
-
-The response also includes the `x-policy-hash` header when a policy is found.
-
-**Response fields**
-
-| Field | Type | Description |
-|---|---|---|
-| `decision` | `"ALLOW" \| "DENY" \| "ALLOW_WITH_LIMITS"` | The access decision |
-| `confidence` | `"LOW" \| "MEDIUM" \| "HIGH" \| "VERY_HIGH"` | Confidence level |
-| `constraints` | `string[]` | Constraints applied (non-empty for `ALLOW_WITH_LIMITS`) |
-| `retryAfter` | `number \| null` | Seconds before retrying, if applicable |
-| `ruleIds` | `string[]` | IDs of rules that contributed to the decision |
-| `version` | `string` | Engine version |
-| `explain` | `string[]` | Human-readable decision explanation |
-| `signals` | `NormalizedSignals` | Normalized reputation signals (see below) |
-| `policyHash` | `string` | Hash of the policy used for this context |
-
-**NormalizedSignals**
-
-| Field | Type | Description |
-|---|---|---|
-| `trust` | `"VERY_LOW" \| "LOW" \| "NEUTRAL" \| "HIGH" \| "VERY_HIGH"` | Aggregated trust (from Ethos) |
-| `socialTrust` | `"VERY_LOW" \| "LOW" \| "NEUTRAL" \| "HIGH" \| "VERY_HIGH"` | Social legitimacy (from Neynar) |
-| `builder` | `"EXPLORER" \| "BUILDER" \| "EXPERT" \| "ELITE"` | Technical credibility (from Talent) |
-| `creator` | `"EXPLORER" \| "BUILDER" \| "EXPERT" \| "ELITE"` | Content credibility (from Talent) |
-| `recencyDays` | `number` | Days since last activity |
-| `spamRisk` | `"VERY_LOW" \| "LOW" \| "NEUTRAL" \| "HIGH" \| "VERY_HIGH"` | Spam risk indicator |
-| `signalCoverage` | `number` | Percentage of signals fetched (0–1) |
-
-**Error responses**
-
-| Status | Code | Description |
-|---|---|---|
-| 400 | `INVALID_REQUEST` | Missing or invalid `subject` / `context` |
-| 413 | `PAYLOAD_TOO_LARGE` | Request body exceeds 100KB |
-| 429 | `RATE_LIMITED` | Too many requests per API key |
-| 500 | `INTERNAL_ERROR` | Server error |
-
 ### Endpoint: Decide with ZK Proof
 
 <div className="bg-zinc-900 border border-zinc-800 rounded-lg p-4 mb-4">
@@ -247,7 +154,7 @@ interface DecisionResponse {
 }
 
 const checkReputation = async (address: string): Promise<DecisionResponse> => {
-  const response = await fetch("https://www.zkbasecred.xyz/api/v1/decide", {
+  const response = await fetch("https://www.zkbasecred.xyz/api/v1/decide-with-proof", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
@@ -277,7 +184,7 @@ import requests
 
 def check_reputation(address: str) -> dict:
     response = requests.post(
-        "https://www.zkbasecred.xyz/api/v1/decide",
+        "https://www.zkbasecred.xyz/api/v1/decide-with-proof",
         json={"subject": address, "context": "allowlist.general"},
     )
     response.raise_for_status()
