--- a/packages/docs/versioned_docs/version-0.1.0/zk-contracts.mdx
+++ b/packages/docs/versioned_docs/version-0.1.0/zk-contracts.mdx
@@ -9,17 +9,21 @@ This page documents the on-chain contracts for ZK-based decisions and how to sub
 
 ## Status
 
-Contracts are deployed on Base Sepolia (84532). Addresses will be published for Base mainnet once live.
+Contracts are deployed on Base mainnet (8453).
 
 ## Contracts
 
 - `Verifier.sol`
 - `DecisionRegistry.sol`
 
-### Base Sepolia (84532)
+### Base Mainnet (8453)
 
-- Verifier: `0x14E91Bb6d25A24E4201B4A32E11F1D3807a4d08c`
-- DecisionRegistry: `0x5a74Fe2909Bf59D0361DbE329c6dB6F705165F86`
+- Verifier: `0x60138da0c6103760864d829C128b9cA2Ea7C9158`
+- DecisionRegistry: `0x8a8A3F95605F6980F6fFCC4C86110fe8d7b5E091`
+
+:::note Resubmission
+The DecisionRegistry allows resubmission — calling `submitDecision` for the same subject + context will overwrite the existing record with the updated decision and proof.
+:::
 
 ## ABI & Types
 
